<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_orange"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/weatherText"
        android:layout_width="190dp"
        android:layout_height="37dp"
        android:text="Location: Weather Condition"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="11dp" />

    <ImageView
        android:id="@+id/teamBPhoto"
        android:layout_width="105dp"
        android:layout_height="99dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageView
        android:id="@+id/teamAPhoto"
        android:layout_width="105dp"
        android:layout_height="99dp"
        android:layout_marginStart="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageButton
        android:id="@+id/teamBUPButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamBPhoto"
        app:layout_constraintVertical_bias="0.448"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageButton
        android:id="@+id/teamAUPButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamAPhoto"
        app:layout_constraintVertical_bias="0.368"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageView
        android:id="@+id/bbIcon"
        android:layout_width="109dp"
        android:layout_height="107dp"
        android:layout_marginLeft="5dp"
        android:src="@drawable/bb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="342dp"
        android:layout_height="371dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/textA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="text"
                android:text="@string/team_a" />

            <TextView
                android:id="@+id/textAPTS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="87dp"
                tools:text="@string/point_one" />

            <Button
                android:id="@+id/buttonAPT3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/three_pointer" />

            <Button
                android:id="@+id/buttonAPT2"
                style="@style/ShapeAppearance.MaterialComponents.SmallComponent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/two_pointer" />

            <Button
                android:id="@+id/buttonAPT1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/free_throw" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="7dp"
            android:layout_height="match_parent"
            android:background="@color/brown" />

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/textB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="text"
                android:text="@string/team_b" />

            <TextView
                android:id="@+id/textBPTS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="87dp"
                tools:text="@string/point_two" />

            <Button
                android:id="@+id/buttonBPT3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/three_pointer" />

            <Button
                android:id="@+id/buttonBPT2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/two_pointer" />

            <Button
                android:id="@+id/buttonBPT1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/free_throw" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/displayButton"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toEndOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.081" />

    <Button
        android:id="@+id/displayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:text="@string/display"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:text="@string/clickA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>